# SecondWhithVK

./: .env example  .gitignore  Bot_For_Working.py  Makefile  Percents_Per_Day_Bank.py  README.md  environment.yml  pyproject.toml  requirements.txt
lib/: exceptions.py  project_log.py  secrets.py
old_script/: Bot_For_Working.py
tests/: conftest.py  test_bot_flow.py
