[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percents-per-day-bot"
version = "0.1.0"
description = "Телеграм-бот: считает ежедневный процент от суммы."
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "Eugenii Petrov ", , email = "epoy74@gmail.com" }]

dependencies = [
    "pyTelegramBotAPI == 4.*"
]

[project.optional-dependencies] = [
    "ruff",
    "pytest"
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"

#рекомендуется по pep8
indent-style = "space" 

docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "A", "C", "T"]
# ignore = []